--- a/src/styles/layers.scss
+++ b/src/styles/layers.scss
@@ -19,7 +19,8 @@
 	.ls-row {
 		display: flex;
 		flex-direction: row;
-		align-items: flex-start;
+		align-items: center;
+		justify-content: space-evenly;
 		padding: 10px 30px;
 		transition: opacity 0.2s, filter 0.2s;
 
@@ -34,7 +35,7 @@
 	}
 
 	.ls-type {
-		width: 100%;
+		min-width: 120px;
 		text-align: center;
 
 		svg {
